CTT_Package/objects/ACN_Question_Response__c.object
<CustomObject>
    <fields>
        <fullName>ACN_Call_Flow_Conducted__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Call Flow Conducted</label>
        <referenceTo>ACN_Call_Flow_Conducted__c</referenceTo>
        <relationshipLabel>Question Response</relationshipLabel>
        <relationshipName>Question_Response</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ACN_Call_Flow_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Call Flow Template</label>
        <referenceTo>ACN_Call_Flow_Template__c</referenceTo>
        <relationshipLabel>Question Response</relationshipLabel>
        <relationshipName>Question_Response</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ACN_Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ACN_Options__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Options</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ACN_Question_Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Question Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ACN_Question_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Question Number</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACN_Responses__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Responses</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ACN_Sequence_Number__c</fullName>
        <label>Sequence Number</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACN_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Question Response</relationshipLabel>
        <relationshipName>Question_Response</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Section__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Section</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Tech_Ques_Date_Response__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Tech Ques Date Response</label>
        <type>Date</type>
    </fields>
    <label>Question Response</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>QRN-{00000}</displayFormat>
        <label>Question Response Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Question Response</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>